API描述管理
