# entities/sys_api.go
@@ -1,9 +1,12 @@
 package entities
 
-import "github.com/voyager-go/start-go-api/entities/internal"
+import (
+	"github.com/voyager-go/start-go-api/entities/internal"
+)
 
 type SysApi internal.SysApi
 
+// SysApiServiceCreateReq 创建输入参数
 type SysApiServiceCreateReq struct {
 	Path        string `json:"path" binding:"required"`
 	Description string `json:"description" binding:"required"`
